--- a/style.css
+++ b/style.css
@@ -1,77 +1,165 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+@import url(https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap);
 
 *{
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
 
 body{
-    background-color: #895cf3;
-}
-
-.container{
-    width: 500px;
-    background: #fff;
-    padding: 80px 40px;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
-    border-radius: 10px;
-    box-shadow: 0 30px 45px rgba(18, 8, 39, 0.2);
-}
-
-h2{
-    text-align: center;
-    font-size: 40px;
-    font-weight: 600;
-    letter-spacing: 2px;
-}
-
-h2 span{
-    color:#895cf3;
-}
-
-.wrapper-1{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 50px 0 70px;
-    gap: 10px;
+    min-height: 100vh;
+    background: #43A047;
 }
 
-.wrapper-1 input{
-    width: 100px;
-    font-size: 30px;
+.container{
+    width: 450px;
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
+}
+
+.container h2{
     font-weight: 600;
+    font-size: 1.31rem;
+    padding: 1rem 1.75rem;
+    border-bottom: 1px solid #d4dbe5;
 }
 
-input{
-    padding-left: 15px 10px;
-    border: 1px solid #bbc0c5;
-    color: #170444;
-    outline: none;
+.wrapper{
+    margin: 1.25rem 1.75rem;
 }
 
-input:focus{
-    border: 2px solid #895cf3;
+.wrapper .input-box{
+    position: relative;
 }
 
-label{
-    color: #170444;
-    font-weight: 600;
-    letter-spacing: 0.6px;
+.input-box input{
+    width: 100%;
+    height: 53px;
+    background-color: transparent;
+    font-size: 1.06rem;
+    font-weight: 500;
+    border-radius: 4px;
+    letter-spacing: 1.4px;
+    border: 1px solid #aaa;
+    padding: 0 2.85rem 0 1rem;
 }
 
-.box{
+.input-box span{
+    position: absolute;
+    right: 13px;
+    cursor: pointer;
+    line-height: 53px;
+    color: #707070;
+}
+
+.input-box span:hover{
+    color: #43A047 !important;
+}
+
+.wrapper .pass-indicator{
+    width: 100%;
+    height: 4px;
+    background: #e0e0e0; 
+    position: relative;
+    margin-top: 0.75rem;
+    border-radius: 25px;
+}
+
+.pass-indicator::before{
+    position: absolute;
+    content: "";
+    height: 100%;
+    width: 50%;
+    border-radius: inherit;
+    transition: width 0.3s ease;
+}
+
+.pass-indicator#weak::before{
+    width: 30%;
+    background: #e64a4a;
+}
+
+
+.pass-indicator#medium::before{
+    width: 65%;
+    background: #fbc02d;
+}
+
+
+.pass-indicator#strong::before{
+    width: 100%;
+    background: #43A047;
+}
+
+.wrapper .pass-length{
+    margin: 1.56rem 0 1.25rem;
+}
+
+.pass-length .details{
     display: flex;
     justify-content: space-between;
-    gap: 15px;
 }
 
-.wrapper-2 input, .wrapper-3 input{
+.pass-length input{
     width: 100%;
-    font-size: 18px;
+    height: 5px;
+    appearance: none;
+    background: #ddd;
+}
+
+
+.pass-settings .options{
+    display: flex;
+    list-style: none;
+    flex-wrap: wrap;
+    margin-top: 1rem;
+}
+
+.pass-settings .options .option{
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+    width: calc(100% / 2);
+}
+
+.options .option:first-child{
+    pointer-events: none;
+}
+
+.options .option:first-child input{
+    opacity: 0.7;
+}
+
+.options .option input{
+    height: 16px;
+    width: 16px;
+    cursor: pointer;
+}
+
+.options .option label{
+    cursor: pointer;
+    color: #4f4f4f;
+    padding-left: 0.63rem;
+}
+
+.wrapper .generate-btn{
+    width: 100%;
+    color: #fff;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background: #43A047;
+    font-size: 1.06rem;
+    padding: 0.94rem 0;
+    border-radius: 5px;
+    text-transform: uppercase;
+    margin: 0.94rem 0 1.3rem;
+}
+.generate-btn:hover{
+    background: #388e3c;
 }
